# orderflow

./: README.md  docker-compose.yml  main.py  producer.py  pyproject.toml  requirements.txt
api/: orders.py
core/: config.py  database.py  kafka.py
models/: event.py  order.py
repo/: event_repo.py  order_repo.py
schemas/: order.py
services/: event_service.py  order_service.py
workers/: base_worker.py  finalizer_worker.py  inventory_worker.py  payment_worker.py  validation_worker.py
